--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -2,22 +2,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: kustomizegoat
-  name: kustomizegoat
-  namespace: kustomizegoat
+    app: kustomizezpc
+  name: kustomizezpc
+  namespace: kustomizezpc
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: kustomizegoat
+      app: kustomizezpc
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: kustomizegoat
+        app: kustomizezpc
     spec:
       containers:
-      - image: eurogig/kustomizegoat:0.1
-        name: kustomizegoat
+      - image: willguibr/kustomizezpc:0.1
+        name: kustomizezpc
 
