--- a/kustomize/base/service.yaml
+++ b/kustomize/base/service.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: kustomizegoat
+    app: kustomizezpc
   name: goatlb
-  namespace: kustomizegoat
+  namespace: kustomizezpc
 spec:
   ports:
   - name: goatport
@@ -12,5 +12,5 @@ spec:
     targetPort: 8080
     port: 80
   selector:
-    app: kustomizegoat
+    app: kustomizezpc
   type: LoadBalancer
