--- a/kustomize/overlays/prod/service.yaml
+++ b/kustomize/overlays/prod/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: kustomizegoat
+    app: kustomizezpc
     env: prod
   name: goatlb
-  namespace: kustomizegoat
+  namespace: kustomizezpc
