--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
           client_secret : ${{ secrets.ZSCANNER_CLIENT_SECRET }}
           region : 'US'
-          iac_dir : '../../kustomize'
-          iac_file : '../../kustomize'
+          iac_dir : '.'
+          iac_file : '.'
           output_format : 'human+github-sarif'
           fail_build : 'false'
       - name: Upload SARIF file
