--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,10 @@ jobs:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
           client_secret : ${{ secrets.ZSCANNER_CLIENT_SECRET }}
           region : 'US'
-          iac_dir : '../../'
-          iac_file : '../../'
+          iac_dir : '../../kustomize'
+          iac_file : '../../kustomize'
           output_format : 'human+github-sarif'
+          framework: 'kustomize'
           fail_build : 'false'
       - name: Upload SARIF file
         if: ${{ success() || failure() && (steps.zscaler-iac-scan.outputs.sarif_file_path != '') }}
